Reformed for man2man feature.

--- a/templates/layout-full.html
+++ b/templates/layout-full.html
@@ -12,14 +12,14 @@
 
           <ul id='firechat-room-list'></ul>
 
-          <div class='firechat-dropdown-footer aligncenter'>
+          <!-- <div class='firechat-dropdown-footer aligncenter'>
             <button type='button' class='btn twothird center' id='firechat-btn-create-room-prompt'>Create Room</button>
-          </div>
+          </div> -->
 
         </div>
 
       </div>
-      <div class='half firechat-dropdown' style=''>
+      <!-- <div class='half firechat-dropdown' style=''>
         <a data-event='firechat-user-search-btn' class='btn full firechat-dropdown-toggle' data-toggle="firechat-dropdown" href='#'>
           <span class='icon user-group'></span>
           Visitors
@@ -45,7 +45,7 @@
             </label>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div id='firechat-tabs' class='clearfix'>
