--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class='firechat-dropdown twofifth'>
+    <!-- <div class='firechat-dropdown twofifth'>
       <a data-event='firechat-user-search-btn' class='full btn firechat-dropdown-toggle' data-toggle="firechat-dropdown" href='#'>
         <span class='icon plus'>+</span>
         Invite
@@ -32,14 +32,11 @@
           <div id='firechat-room-user-search-controls-<%- id %>' class='clearfix'>
 
             <span class="quarter"></span>
-            <!--
-            <button type='button' class='btn third disabled' data-event='firechat-user-search' data-template='templates/room-user-search-list-item.html' data-target='firechat-room-user-search-<%- id %>' data-controls='firechat-room-user-search-controls-<%- id %>' data-toggle='firechat-pagination-prev' disabled=disabled>Prev</button>
-            -->
             <button type='button' class='btn half disabled' data-event='firechat-user-search' data-template='templates/room-user-search-list-item.html' data-target='firechat-room-user-search-<%- id %>' data-controls='firechat-room-user-search-controls-<%- id %>' data-toggle='firechat-pagination-next'  disabled=disabled>Next</button>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <a href='#!' data-event='firechat-close-tab' class='icon close right' style='15px 5px' title='Leave Room'></a>
 
