Supported image display in chat message.

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -630,6 +630,13 @@
   .message.message-notification .message-content {
    font-style: italic;
   }
+  .message-image-wrapper {
+    width: 100%;
+    img {
+      width: auto;
+      max-width: 100%;
+    }
+  }
   ul::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 7px;
