--- a/templates/message.html
+++ b/templates/message.html
@@ -14,6 +14,9 @@
 
   </div>
   <div class='clearfix message-content'>
+    <% if (image) { %>
+      <div class="message-image-wrapper"><img src="<%= image %>" /></div>
+    <% } %>
     <%= message %>
   </div>
 </div>
