--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -43,7 +43,10 @@
   </div>
 
   <div class='clearfix'>
-    <div id='firechat-messages<%- id %>' class='chat'></div>
+    <div 
+      id='firechat-messages<%- id %>' 
+      data-event='firechat-room-thread-scroll' 
+      class='chat'></div>
   </div>
 
   <div class='clearfix'>
