--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -50,6 +50,14 @@
   </div>
 
   <div class='clearfix'>
+    <a class="full btn btn-mark-read" 
+      id="btn-mark-read-<%- id %>">
+      <span class="icon check"></span>
+      既読にする
+    </a>
+  </div>
+
+  <div class='clearfix'>
     <label>Your message:</label>
     <textarea id='textarea<%- id %>' placeholder='Type your message here...'></textarea>
   </div>
