support upload image

--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -60,5 +60,6 @@
   <div class='clearfix'>
     <label>Your message:</label>
     <textarea id='textarea<%- id %>' placeholder='Type your message here...'></textarea>
+    <input type="file" value="upload" id="uploadImg"></div>
   </div>
 </div>
