--- a/templates/message.html
+++ b/templates/message.html
@@ -15,7 +15,7 @@
   </div>
   <div class='clearfix message-content'>
     <% if (image) { %>
-      <div class="message-image-wrapper"><img src="<%= image %>" /></div>
+      <div class="message-image-wrapper"><img src="<%= image %>" style="width:50%" /></div>
     <% } %>
     <%= message %>
   </div>
