--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -60,6 +60,9 @@
   <div class='clearfix'>
     <label>Your message:</label>
     <textarea id='textarea<%- id %>' placeholder='Type your message here...'></textarea>
-    <input type="file" value="upload" id="uploadImg"></div>
+    <form
+      class="dropzone"
+      id="uploader">
+    </form>
   </div>
 </div>
