--- a/templates/layout-full.html
+++ b/templates/layout-full.html
@@ -1,77 +1,55 @@
-<div id='firechat' class='full'>
-  <div id='firechat-header' class='clearfix'>
+<div id="chat">
 
-    <div class='clearfix'>
-
-      <div class='half firechat-dropdown' style=''>
-        <a id='firechat-btn-rooms' class='firechat-dropdown-toggle btn full' data-toggle="firechat-dropdown" href='#'>
-          <span class='icon user-chat'></span>
-          最近のチャット
-          <span class='caret'></span>
-        </a>
-        <div class='firechat-dropdown-menu full' role='menu'>
-
-          <ul id='firechat-room-list'></ul>
-
-          <!-- <div class='firechat-dropdown-footer aligncenter'>
-            <button type='button' class='btn twothird center' id='firechat-btn-create-room-prompt'>Create Room</button>
-          </div> -->
-
-        </div>
-
-      </div>
-
-      <div class='half firechat-dropdown' style=''>
-        <a 
-          id='firechat-btn-unread-rooms' 
-          class='firechat-dropdown-toggle btn full' 
-          data-toggle="firechat-dropdown" 
-          href='#'>
-          <span class='icon user-chat'></span>
-          未読のチャット
-          <span class='caret'></span>
-        </a>
-        <div class='firechat-dropdown-menu full' role='menu'>
-
-          <ul id='firechat-unread-room-list'></ul>
-
-        </div>
-
-      </div>
-      
-      <!-- <div class='half firechat-dropdown' style=''>
-        <a data-event='firechat-user-search-btn' class='btn full firechat-dropdown-toggle' data-toggle="firechat-dropdown" href='#'>
-          <span class='icon user-group'></span>
-          Visitors
-          <span class='caret'></span>
-        </a>
-        <div class='firechat-dropdown-menu' role='menu'>
-          <div class='firechat-dropdown-header aligncenter clearfix'>
-            <div class='search-wrapper'>
-              <span class='icon search'></span>
-              <input type='text' data-event='firechat-user-search' data-template='templates/user-search-list-item.html' data-target='firechat-user-search' data-controls='firechat-user-search-controls' class='center fivesixth'>
+  <div class="col-md-3" id="chat_left">
+        <div class="chat_search_box col-md-12">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search" name="q">
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
             </div>
           </div>
-          <ul id='firechat-user-search'></ul>
-
-          <div class='firechat-dropdown-footer aligncenter clearfix'>
-            <div id='firechat-user-search-controls' class='clearfix'>
-              <span class="quarter"></span>
-              <button type='button' class='btn half' data-event='firechat-user-search' data-toggle='firechat-pagination-next' data-template='templates/user-search-list-item.html' data-target='firechat-user-search' data-controls='firechat-user-search-controls' disabled=disabled>Next</button>
-            </div>
-
-            <label class='center full'>
-              <small>Use "+ Invite" button within chat rooms for regular invites.</small>
-            </label>
+        </div>
+        <div class="chat-group col-sm-12">
+          <div class="col-sm-4">
+            <button class="btn btn-sm btn-default active" type="button">G1 <span class="chat_notification">10</span></button>
+          </div>
+          <div class="col-sm-4 text-center">
+            <button class="btn btn-sm btn-default" type="button">G2 <span class="chat_notification">2</span></button>
+          </div>
+          <div class="col-sm-4 text-right">
+            <button class="btn btn-sm btn-default" type="button">G3</button>
           </div>
         </div>
-      </div> -->
+        <div class="clearfix"></div>
+
+        <ul class="list-group contact-list" id='firechat-tab-list'>
+        </ul>
+
+
+  </div>
+  <div class="col-md-6" id="chat_middle">
+    <div class="panel-body">
+      <div id='firechat-tab-content' class='tab-content'></div>
     </div>
   </div>
-  <div id='firechat-tabs' class='clearfix'>
-    <ul id='firechat-tab-list' class='nav nav-tabs clearfix'></ul>
-    <div id='firechat-tab-content' class='tab-content'></div>
+  <div class="col-md-3" id="chat_right">
+    <div class="col-md-6 col-md-offset-3">
+        <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="" class="img-responsive img-circle" />
+    </div>
+    <div class="clearfix"></div>
+    <ul>
+      <li>
+        <span class="col-sm-3">Name</span>
+        <strong>User</strong>
+      </li>
+      <li>
+        <span class="col-sm-3">Email</span>
+        <strong>abc@gmail.com</strong>
+      </li>
+      <li>
+        <span class="col-sm-3">Mobile</span>
+        <strong>1212123</strong>
+      </li>
+    </ul>
   </div>
-
-  <div id='firechat-footer' class='clearfix'></div>
 </div>
