--- a/templates/layout-full.html
+++ b/templates/layout-full.html
@@ -10,20 +10,18 @@
           </div>
         </div>
         <div class="chat-group col-sm-12">
-          <div class="col-sm-4">
-            <button class="btn btn-sm btn-default active" type="button">G1 <span class="chat_notification">10</span></button>
+          <div class="col-sm-5">
+            <button class="btn btn-sm btn-default" type="button" id="firechat-btn-unread-rooms">Unread<span class="chat_notification hide">0</span></button>
           </div>
-          <div class="col-sm-4 text-center">
-            <button class="btn btn-sm btn-default" type="button">G2 <span class="chat_notification">2</span></button>
-          </div>
-          <div class="col-sm-4 text-right">
-            <button class="btn btn-sm btn-default" type="button">G3</button>
+          <div class="col-sm-5 text-right">
+            <button class="btn btn-sm btn-default active" type="button" id="firechat-btn-rooms">All<span class="chat_notification hide">0</span></button>
           </div>
         </div>
         <div class="clearfix"></div>
 
-        <ul class="list-group contact-list" id='firechat-tab-list'>
-        </ul>
+        <ul class="list-group contact-list" id='firechat-unread-room-list' style="display: none;"></ul>
+        <ul class="list-group contact-list" id='firechat-tab-list'></ul>
+
 
 
   </div>
