--- a/templates/room-list-item.html
+++ b/templates/room-list-item.html
@@ -1,5 +1,16 @@
 <li data-room-type='<%- type %>' data-room-id='<%- id %>' data-room-name='<%- name %>'>
-  <a href='#!' class='clearfix <% if (isRoomOpen) { %> highlight <% } %>'>
-    <span class='left' title='<%- name %>'><%- name %></span>
+  <a href='#!' data-toggle='firechat-tab' title='<%- name %>'>
+    <div class="row_corner">テスト</div>
+    <div class="col-xs-12 col-sm-4">
+      <img src="http://api.randomuser.me/portraits/men/97.jpg" alt="Scott Stevens" class="img-responsive img-circle" />
+    </div>
+    <div class="col-xs-12 col-sm-8">
+      <span class="name"><%- name %></span>
+      <span>
+        <i class="famfamfam-flag-jp"></i>
+        <span class="chat_notification">1</span>
+      </span>
+    </div>
+    <div class="clearfix"></div>
   </a>
 </li>
