--- a/templates/layout-full.html
+++ b/templates/layout-full.html
@@ -1,7 +1,7 @@
 <div id="chat">
 
   <div class="col-md-3" id="chat_left">
-        <div class="chat_search_box col-md-12">
+        <div class="chat_search_box col-md-12 hide">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search" name="q">
             <div class="input-group-btn">
