--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -13,12 +13,12 @@
       </label>
       <button
         id="btn-mark-read-<%- id %>">
-        テキスト
+        既読にする
       </button>
     </div>
     <textarea class="form-control input-sm" id="textarea<%- id %>" cols="100" rows="5"></textarea>
   </div>
-  <small>You can make a new line with [Shift + Enter]</small>
+  <small>[Shift + Enter]で改行できます</small>
 
 
 </div>
