--- a/src/less/chat.less
+++ b/src/less/chat.less
@@ -1,5 +1,12 @@
+
+@bg_color: #fff6f0;
+@default_color: #6B5034;
+@solid_border_color: #B79F99;
+@light_color: #a58d86;
+@highlight_color: #F4E6DD;
+
 body {
-    background: #FEF7F1;
+    background: @bg_color;
 }
 ::-webkit-scrollbar-track {
     background-color: inherit;
@@ -38,14 +45,14 @@ body {
     font-size: 12px;
 }
 .chat li .chat-body small {
-    color: #D6C4BE;
+    color: @light_color;
     font-size: 10px;
     line-height: 20px;
     float: right;
 }
 #chat_left {
-    border-right: 1px solid #B79F99;
-    padding: 0px;
+    border-right: 1px solid @solid_border_color;
+    
 }
 #chat_left .chat-group {
     margin: 0 0 10px 0;
@@ -60,9 +67,9 @@ body {
 .chat-group button {
     position: relative;
     background: #FFFFFF;
-    border-color: #745A40;
+    border-color: @default_color;
     width: 80%;
-    color: #6B5034;
+    color: @default_color;
     border-radius: 5px;
 }
 .chat-group .col-sm-4 {
@@ -71,7 +78,7 @@ body {
 .chat-group button:hover,
 .chat-group button.active:hover,
 .chat-group button.active {
-    background: #6B5034;
+    background: @default_color;
     color: #F3F1EE;
 }
 .chat-group button .chat_notification {
@@ -94,7 +101,7 @@ body {
 }
 .contact-list li {
     cursor: pointer;
-    border: 1px solid #B79F99;
+    border: 1px solid @solid_border_color;
     border-right: none;
     position: relative;
     overflow: hidden;
@@ -106,7 +113,7 @@ body {
 }
 .contact-list li:hover,
 .contact-list li.active {
-    background: #F4E6DD;
+    background: @highlight_color;
 }
 .contact-list li a span {
     display: block;
@@ -122,7 +129,7 @@ body {
     text-align: center;
 }
 .contact-list li a .row_corner {
-    background: #B79F99;
+    background: @solid_border_color;
     color: #F3F1EE;
     font-size: 8px;
     position: absolute;
@@ -136,7 +143,7 @@ body {
     text-align: center;
 }
 #chat_middle {
-    border-right: 1px solid #B79F99;
+    border-right: 1px solid @solid_border_color;
 }
 .panel-message {
     display: block;
@@ -148,18 +155,18 @@ body {
     padding: 6px 8px;
 }
 .panel-message .message_top button {
-    background: #6B5034;
+    background: @default_color;
     color: #E1E1E1;
     border-radius: 3px;
-    font-size: 8px;
+    font-size: 83%;
     line-height: 15px;
     float: right;
-    padding: 0 3px;
+    padding: 3px 6px;
     border: none;
 }
 .panel-message #uploader {
     margin: 0;
-    color: #C9B7B2;
+    color: @light_color;
     cursor: pointer;
 }
 .panel-message .file_upload {
@@ -169,7 +176,7 @@ body {
     border: none;
 }
 #firechat-tab-content .instruction {
-    color: #C9B7B2;
+    color: @light_color;
     text-align: right;
 }
 
