--- a/templates/room-list-item.html
+++ b/templates/room-list-item.html
@@ -8,7 +8,7 @@
       <span class="name"><%- name %></span>
       <span>
         <i class="famfamfam-flag-jp"></i>
-        <span class="chat_notification">1</span>
+        <span class="chat_notification">NEW</span>
       </span>
     </div>
     <div class="clearfix"></div>
