--- a/templates/message.html
+++ b/templates/message.html
@@ -1,6 +1,6 @@
 <li class="<% if (isSelfMessage) { %>right <% }else { %>left <% } %> clearfix">
   <span class="chat-img col-xs-12 col-sm-2">
-      <img src="http://api.randomuser.me/portraits/men/56.jpg" alt="<%- name %>" class="img-responsive img-circle" />
+      <img src="<%= avatar %>" alt="<%- name %>" class="img-responsive img-circle" />
   </span>
   <div class="chat-body clearfix col-sm-7">
       <p>
