--- a/templates/room-list-item.html
+++ b/templates/room-list-item.html
@@ -2,7 +2,7 @@
   <a href='#!' data-toggle='firechat-tab' title='<%- name %>'>
     <div class="row_corner">テスト</div>
     <div class="col-xs-12 col-sm-4">
-      <img src="http://api.randomuser.me/portraits/men/97.jpg" alt="Scott Stevens" class="img-responsive img-circle" />
+      <img src="<%= avatar %>" alt="<%- name %>" class="img-responsive img-circle" />
     </div>
     <div class="col-xs-12 col-sm-8">
       <span class="name"><%- name %></span>
