Implemented room meta view.

--- a/templates/layout-full.html
+++ b/templates/layout-full.html
@@ -32,22 +32,18 @@
   </div>
   <div class="col-md-3" id="chat_right">
     <div class="col-md-6 col-md-offset-3">
-        <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="" class="img-responsive img-circle" />
+        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="" class="roommeta-avatar img-responsive img-circle" />
     </div>
     <div class="clearfix"></div>
-    <ul>
-      <li>
+    <ul class="roommeta-table">
+      <!-- <li>
         <span class="col-sm-3">Name</span>
-        <strong>User</strong>
+        <strong></strong>
       </li>
       <li>
         <span class="col-sm-3">Email</span>
-        <strong>abc@gmail.com</strong>
-      </li>
-      <li>
-        <span class="col-sm-3">Mobile</span>
-        <strong>1212123</strong>
-      </li>
+        <strong></strong>
+      </li> -->
     </ul>
   </div>
 </div>
