--- a/templates/room-list-item.html
+++ b/templates/room-list-item.html
@@ -1,4 +1,9 @@
-<li data-room-type='<%- type %>' data-room-id='<%- id %>' data-room-name='<%- name %>'>
+<li data-room-type='<%- type %>' 
+  data-room-id='<%- id %>' 
+  data-room-name='<%- name %>'
+  data-roommeta-name='<%- name %>'
+  data-roommeta-avatar='<%- avatar %>'
+  data-roommeta-email="">
   <a href='#!' data-toggle='firechat-tab' title='<%- name %>'>
     <div class="row_corner">テスト</div>
     <div class="col-xs-12 col-sm-4">
