--- a/templates/tab-menu-item.html
+++ b/templates/tab-menu-item.html
@@ -1,4 +1,7 @@
-<li data-room-id='<%- id %>'>
+<li data-room-id='<%- id %>'
+  data-roommeta-name='<%- name %>'
+  data-roommeta-avatar='<%- avatar %>'
+  data-roommeta-email="">
   <a href='#<%- id %>' data-toggle='firechat-tab' title='<%- name %>'>
     <div class="row_corner">テスト</div>
     <div class="col-xs-12 col-sm-4">
