Design Now Typing Signal

--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -3,6 +3,7 @@
     id='firechat-messages<%- id %>' 
     class='chat'></ul>
 
+  <p class="instruction" id="typingSignal"></p>
   <div class="panel-message" id="panel-message">
     <div class="message_top">
       <a class="fa fa-picture-o fa-lg" id="uploader"></a>
@@ -19,7 +20,7 @@
     </div>
     <textarea class="form-control input-sm" id="textarea<%- id %>" cols="100" rows="5"></textarea>
   </div>
-  <p class="instruction"><small>[Shift + Enter]で改行できます</small></p>
+  <p class="instruction text-right"><small>[Shift + Enter]で改行できます</small></p>
 
 
 </div>
