--- a/templates/message.html
+++ b/templates/message.html
@@ -7,6 +7,10 @@
           <% if (image) { %>
             <img src="<%= image %>" style="width:50%" />
           <% } %>
+          <% if (file) { %>
+            Download Attachted File: <a href="<%= file %>" target="_blink" class="btn"><i class="fa fa-download" aria-hidden="true"></i>
+</a>
+          <% } %>
           <%= message %>
       </p>
       <small><%- localtime %></small>
