--- a/templates/message.html
+++ b/templates/message.html
@@ -8,8 +8,7 @@
             <img src="<%= image %>" style="width:50%" />
           <% } %>
           <% if (file) { %>
-            Download Attachted File: <a href="<%= file %>" target="_blink" class="btn"><i class="fa fa-download" aria-hidden="true"></i>
-</a>
+            Download Attachted File: <a href="<%= file %>" target="_blink" class="btn"><i class="fa fa-download" aria-hidden="true"></i></a> <br>
           <% } %>
           <%= message %>
       </p>
