Make text japanese.

--- a/templates/layout-full.html
+++ b/templates/layout-full.html
@@ -11,7 +11,7 @@
         </div>
         <div class="chat-group col-sm-12">
           <div class="col-sm-5">
-            <button class="btn btn-sm btn-default" type="button" id="firechat-btn-unread-rooms">Unread<span class="chat_notification hide">0</span></button>
+            <button class="btn btn-sm btn-default" type="button" id="firechat-btn-unread-rooms">未読<span class="chat_notification hide">0</span></button>
           </div>
           <div class="col-sm-5 text-right">
             <button class="btn btn-sm btn-default active" type="button" id="firechat-btn-rooms">All<span class="chat_notification hide">0</span></button>
