--- a/src/less/chat.less
+++ b/src/less/chat.less
@@ -72,6 +72,7 @@ body {
     width: 80%;
     color: @default_color;
     border-radius: 5px;
+    outline: none;
 }
 .chat-group .col-sm-4 {
     padding: 0px;
