--- a/templates/tab-menu-item.html
+++ b/templates/tab-menu-item.html
@@ -10,7 +10,7 @@
     <div class="col-xs-12 col-sm-8">
       <span class="name"><%- name %></span>
       <span>
-        <i class="famfamfam-flag-jp"></i>
+        <!-- <i class="famfamfam-flag-jp"></i> -->
         <span class="chat_notification hide">NEW</span>
       </span>
     </div>
