Improved tab switching ux.

--- a/src/less/chat.less
+++ b/src/less/chat.less
@@ -77,11 +77,12 @@ body {
 .chat-group .col-sm-4 {
     padding: 0px;
 }
-.chat-group button:hover,
-.chat-group button.active:hover,
 .chat-group button.active {
     background: @default_color;
     color: #F3F1EE;
+}
+.chat-group button.btn:focus {
+    outline: none;
 }
 .chat-group button .chat_notification {
     position: absolute;
