--- a/templates/layout-full.html
+++ b/templates/layout-full.html
@@ -11,10 +11,10 @@
         </div>
         <div class="chat-group col-sm-12">
           <div class="col-sm-5">
-            <button class="btn btn-sm btn-default active" type="button" id="firechat-btn-unread-rooms">未読<span id="unread_count" class="chat_notification">0</span></button>
+            <button class="active" type="button" id="firechat-btn-unread-rooms">未読<span id="unread_count" class="chat_notification">0</span></button>
           </div>
           <div class="col-sm-5 text-right">
-            <button class="btn btn-sm btn-default" type="button" id="firechat-btn-rooms">All<span class="chat_notification hide">0</span></button>
+            <button class="" type="button" id="firechat-btn-rooms">All<span class="chat_notification hide">0</span></button>
           </div>
         </div>
         <div class="clearfix"></div>
