Improved room list.

--- a/templates/tab-menu-item.html
+++ b/templates/tab-menu-item.html
@@ -2,7 +2,7 @@
   data-roommeta-name='<%- name %>'
   data-roommeta-avatar='<%- avatar %>'
   data-roommeta-email="">
-  <a href='#<%- id %>' data-toggle='firechat-tab' title='<%- name %>'>
+  <a class="row" href='#<%- id %>' data-toggle='firechat-tab' title='<%- name %>'>
     <div class="col-xs-12 col-sm-4">
       <img src="<%= avatar %>" alt="<%- name %>" class="img-responsive img-circle" />
     </div>
