--- a/templates/room-list-item.html
+++ b/templates/room-list-item.html
@@ -4,7 +4,7 @@
   data-roommeta-name='<%- name %>'
   data-roommeta-avatar='<%- avatar %>'
   data-roommeta-email="">
-  <a href='#!' data-toggle='firechat-tab' title='<%- name %>'>
+  <a class="row" href='#!' data-toggle='firechat-tab' title='<%- name %>'>
     <div class="col-xs-12 col-sm-4">
       <img src="<%= avatar %>" alt="<%- name %>" class="img-responsive img-circle" />
     </div>
