Integrated chat display logic.

--- a/src/less/chat.less
+++ b/src/less/chat.less
@@ -84,7 +84,7 @@ body {
 .chat-group button.btn:focus {
     outline: none;
 }
-.chat-group .chat_notification {
+.chat-group .chat_count {
     position: absolute;
     right: -10px;
     top: -7px;
@@ -95,7 +95,7 @@ body {
     line-height: 20px;
     z-index: 1;
 }
-.chat_notification {
+.chat_count {
     background: @accent_color;
     color: #FEF8F8;
     border-radius: 20px;
@@ -130,7 +130,7 @@ body {
     display: block;
     margin-top: 10px;
 }
-.contact-list li a .chat_notification {
+.contact-list li a .chat_count {
     font-size: 12px;
     /*width: 25px;*/
     height: 25px;
