--- a/src/less/chat.less
+++ b/src/less/chat.less
@@ -95,7 +95,7 @@ body {
     line-height: 20px;
     z-index: 1;
 }
-.chat_count {
+.chat_count, .chat_notification {
     background: @accent_color;
     color: #FEF8F8;
     border-radius: 20px;
@@ -130,7 +130,7 @@ body {
     display: block;
     margin-top: 10px;
 }
-.contact-list li a .chat_count {
+.contact-list li a .chat_notification {
     font-size: 12px;
     /*width: 25px;*/
     height: 25px;
