Supported labeling on room list. Improved enterRoom logic.

--- a/templates/room-list-item.html
+++ b/templates/room-list-item.html
@@ -14,7 +14,9 @@
     <div class="col-xs-12 col-sm-8">
       <span class="name"><%- name %></span>
       <span>
-        <span class="chat_notification">NEW</span>
+        <% if ( label ) { %>
+        <span class="chat_notification"><%- label %></span>
+        <% } %>
       </span>
     </div>
     <div class="clearfix"></div>
