add me and others avatar

--- a/templates/room-list-item.html
+++ b/templates/room-list-item.html
@@ -13,10 +13,8 @@
     </div>
     <div class="col-xs-12 col-sm-8">
       <span class="name"><%- name %></span>
-      <span>
-        <% if ( label ) { %>
-        <span class="chat_notification"><%- label %></span>
-        <% } %>
+      <span>s
+        <span class="chat_notification">NEW</span>
       </span>
     </div>
     <div class="clearfix"></div>
