--- a/templates/room-list-item.html
+++ b/templates/room-list-item.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-xs-12 col-sm-8">
       <span class="name"><%- name %></span>
-      <span>s
+      <span>
         <span class="chat_notification">NEW</span>
       </span>
     </div>
