--- a/src/less/chat.less
+++ b/src/less/chat.less
@@ -44,6 +44,7 @@ body {
     border-radius: 5px;
     padding: 10px;
     font-size: 12px;
+    word-wrap: break-word;
 }
 .chat li .chat-body small {
     color: @light_color;
