--- a/src/less/chat.less
+++ b/src/less/chat.less
@@ -25,6 +25,7 @@ body {
     padding: 0;
     height: 450px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 .chat li {
     margin-bottom: 20px;
