switching mechanism for Message send option

--- a/src/less/chat.less
+++ b/src/less/chat.less
@@ -177,6 +177,7 @@ body {
     float: right;
     padding: 3px 6px;
     border: none;
+    margin-left: 10px;
 }
 .panel-message #uploader {
     margin: 0;
