--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -3,7 +3,7 @@
     id='firechat-messages<%- id %>' 
     class='chat'></ul>
 
-  <p class="instruction" id="typingSignal"></p>
+  <p class="instruction typingSignal"></p>
   <div class="panel-message" id="panel-message">
     <div class="message_top">
       <a class="fa fa-picture-o fa-lg" id="uploader"></a>
